# rbot

./: .gitignore  README.rst  pyproject.toml  tox.ini
rbot/: bot.py  main.py  settings.py  utils.py
rbot/bot/: bot.py
rbot/bot/commands/: base.py  clear.py  history.py  music.py  roll.py
rbot/commands/: clear.py  roll.py
rbot/utils/: settings.py  yt_player.py
tests/: test_rbot.py
