[tool.poetry]
name = "rbot"
version = "0.1.0"
description = ""
authors = ["Julian Da Cunha <j.dacunha@pm.me>"]

[tool.poetry.scripts]
rbot = "rbot.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pyaml = "^20.4.0"
rich = "^10.6.0"
PyNaCl = "^1.4.0"
"discord.py" = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

